--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"@tsparticles/confetti": "^3.9.1",
+		"tsparticles": "^3.9.1"
 	}
 }
